--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="h-100">
     <head>
         <meta charset="UTF-8">
-        <title>{{ user.name }} — Flask Blog</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+              crossorigin="anonymous">
+        <title>
+            {% if title %}
+                {{ title }} — Flask Blog
+            {% else %}
+                This is a Flask Blog
+            {% endif %}
+        </title>
+        <link href="{{ url_for('static', filename='custom.css') }}"
+              rel="stylesheet" type="text/css">
     </head>
-    <body>
-        <h1>Good evening, {{ user.name }}!</h1>
+    <body class="d-flex flex-column h-100">
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{{ url_for('index') }}">Flask Blog</a>
+                    <button class="navbar-toggler"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#navbarCollapse"
+                                aria-controls="navbarCollapse"
+                                aria-expanded="false"
+                                aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <main class="flex-shrink-0">
+            <div class="container">
+                {% block main %}
+                {% endblock %}
+            </div>
+        </main>
+        <footer class="d-block mt-auto py-3 border-top bg-light">
+            <div class="container">
+              <span class="text-muted">Sticky footer content.</span>
+            </div>
+        </footer>
     </body>
 </html>
