--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -20,7 +20,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="{{ url_for('index') }}">Flask Blog</a>
+                    <a class="navbar-brand">Flask Blog</a>
                     <button class="navbar-toggler"
                                 type="button"
                                 data-bs-toggle="collapse"
@@ -33,7 +33,14 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active"
+                                   aria-current="page"
+                                   href="{{ url_for('index') }}">Home page</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"
+                                   aria-current="page"
+                                   href="{{ url_for('logout') }}">Log out</a>
                             </li>
                         </ul>
                     </div>
