--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -15,6 +15,7 @@
         </title>
         <link href="{{ url_for('static', filename='custom.css') }}"
               rel="stylesheet" type="text/css">
+        <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
     </head>
     <body class="d-flex flex-column h-100">
         <header>
