Beautify page look, add info about dev

--- a/flask_blog/templates/macro/form.html
+++ b/flask_blog/templates/macro/form.html
@@ -12,7 +12,7 @@
     <form id="add_post_form" class="container-fluid rounded border p-4 mb-4"
           action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <h4>Create new post</h4>
+        <h4 class="mb-4">Create new post</h4>
         <div class="mb-4">
             {{ render_form_textfield(form.title) }}</div>
         <div class="mb-4">
