--- a/flask_blog/templates/main.html
+++ b/flask_blog/templates/main.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <h2>Startup (empty) page of my Flask Blog.</h2>
+{#    <h2>Startup (empty) page of my Flask Blog.</h2>#}
+    <div class="container">
+        <h1 class="mb-5">This is my Flask Blog.</h1>
+        <h4 class="mb-4">
+            <a href="https://github.com/Damir-Tugushev">Damir-Tugushev</a>
+            created this app with Flask microframework <br>
+            as a project for enrolling in 'ЦИСМ' integration internship.
+        </h4>
+        <h4 class="mb-4">
+            It's source code can be accessed
+            <a href="https://github.com/Damir-Tugushev/flask_blog">by this link</a>.
+        </h4>
+    </div>
 {% endblock %}
