--- a/flask_blog/templates/404_not_found.html
+++ b/flask_blog/templates/404_not_found.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <h1>Error 404: Not Found</h1>
-    <h2>We are very sorry!</h2>
+    <div class="container">
+        <h3 class="mb-4">Error 404: Not Found</h3>
+        <div>We are very sorry!</div>
+    </div>
 {% endblock %}
