--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" class="h-100">
+<html lang="en" class="h-100">
     <head>
         <meta charset="UTF-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -21,7 +21,8 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand">Flask Blog</a>
+                    <a class="navbar-brand" href="{{ url_for('index') }}">
+                        Flask Blog</a>
                     <button class="navbar-toggler"
                                 type="button"
                                 data-bs-toggle="collapse"
@@ -33,17 +34,24 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav">
+                            {% if current_user and current_user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link active"
+                                       aria-current="page"
+                                       href="{{ url_for('user', login=current_user.login) }}">Profile</a>
+                                </li>
+                            {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link active"
                                    aria-current="page"
-                                   href="{{ url_for('index') }}">Home page</a>
+                                   href="{{ url_for('posts') }}">Feed posts</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link active"
-                                   aria-current="page"
-                                   href="{{ url_for('posts') }}">Posts</a>
-                            </li>
-                            {% if user and user.is_authenticated %}
+                            {% if current_user and current_user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link active"
+                                       aria-current="page"
+                                       href="{{ url_for('deleted_posts') }}">Deleted posts</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link active"
                                        aria-current="page"
@@ -61,16 +69,17 @@
                 </div>
             </nav>
         </header>
-
         <main class="flex-shrink-0">
-            <div class="container">
-                {% block main required %}
-                {% endblock %}
-            </div>
+            {% block main required %}
+            {% endblock %}
         </main>
         <footer class="d-block mt-auto py-3 border-top bg-light">
-            <div class="container">
-              <span class="text-muted">Sticky footer content.</span>
+            <div class="d-flex container justify-content-between align-items-center">
+                <span class="text-muted">
+                    Meet the dev of this blog —
+                    <a href="https://github.com/Damir-Tugushev">Damir-Tugushev</a>!
+                </span>
+                <a href="mailto:0damir.1tugushev@gmail.com">0damir.1tugushev@gmail.com</a>
             </div>
         </footer>
     </body>
