--- a/flask_blog/templates/login.html
+++ b/flask_blog/templates/login.html
@@ -3,32 +3,33 @@
 {% import 'macro/form.html' as form_macro %}
 
 {% block main %}
-    <h1>Log in</h1>
-    <form class="mt-4" id="login_form"
-          action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <div class="mb-4">
-            {{ form_macro.render_form_textfield(form.login) }}</div>
-        <div class="mb-4">
-            {{ form_macro.render_form_textfield(form.password) }}</div>
-        <div class="mb-4 form-check">
-            {{ form.remember_me(class='form-check-input') }}
-            <label for="{{ form.remember_me.id }}" class="form-check-label">
-                {{ form.remember_me.label.text }}</label>
+    <div class="container">
+        <h1 class="mb-4">Sign in</h1>
+        <form id="login_form" action="" method="post" novalidate>
+            {{ form.hidden_tag() }}
+            <div class="mb-4">
+                {{ form_macro.render_form_textfield(form.login) }}</div>
+            <div class="mb-4">
+                {{ form_macro.render_form_textfield(form.password) }}</div>
+            <div class="mb-4 form-check">
+                {{ form.remember_me(class='form-check-input') }}
+                <label for="{{ form.remember_me.id }}" class="form-check-label">
+                    {{ form.remember_me.label.text }}</label>
+            </div>
+            {{ form_macro.render_form_sumbit(form.submit) }}
+        </form>
+        <div class="mt-4">
+            Don't have account? <a href="{{ url_for('register') }}">Register</a>
         </div>
-        {{ form_macro.render_form_sumbit(form.submit) }}
-    </form>
-    <div class="mt-4">
-        Don't have account? <a href="{{ url_for('register') }}">Register</a>
-    </div>
-    <script src="{{ url_for('static', filename='js/form.js') }}"></script>
-    <script type="text/javascript">
-        const csrf_token = '{{ form.csrf_token }}';
-        const form = document.getElementById('login_form');
+        <script src="{{ url_for('static', filename='js/form.js') }}"></script>
+        <script type="text/javascript">
+            const csrf_token = '{{ form.csrf_token }}';
+            const form = document.getElementById('login_form');
 
-        form.addEventListener('submit', event => {
-            event.preventDefault();
-            submit_auth_form('{{ url_for('login_form') }}', csrf_token, form);
-        });
-    </script>
+            form.addEventListener('submit', event => {
+                event.preventDefault();
+                submit_auth_form('{{ url_for('login_form') }}', csrf_token, form);
+            });
+        </script>
+    </div>
 {% endblock %}
